k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: samuelfecaf2025/pedidos-veloz-api-gateway:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pedidos
  template:
    metadata:
      labels:
        app: pedidos
    spec:
      containers:
      - name: pedidos
        image: samuelfecaf2025/pedidos-veloz-pedidos:latest
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pagamentos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pagamentos
  template:
    metadata:
      labels:
        app: pagamentos
    spec:
      containers:
      - name: pagamentos
        image: samuelfecaf2025/pedidos-veloz-pagamentos:latest
        ports:
        - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estoque
spec:
  replicas: 2
  selector:
    matchLabels:
      app: estoque
  template:
    metadata:
      labels:
        app: estoque
    spec:
      containers:
      - name: estoque
        image: samuelfecaf2025/pedidos-veloz-estoque:latest
        ports:
        - containerPort: 3002
