k8s/blue-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-blue-green
spec:
  selector:
    app: api-gateway
    version: blue   # mude para green quando for fazer o switch
  ports:
    - port: 8080
      targetPort: 8080
